[package]
name = "dict-to-mozc"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Masato TOYOSHIMA", "phoepsilonix <phoepsilonix@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
encoding_rs = "0.8.34"
lazy-regex = "3.1.0"
pico-args = "0.5.0"
regex = "1.10.3"
unicode-normalization = "0.1.24"

[profile.release]
strip = "symbols"
