[package]
name = "dict-to-mozc"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Masato TOYOSHIMA", "phoepsilonix <phoepsilonix@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
kanaria = { git = "https://github.com/phoepsilonix/kanaria.git", version = "0.2.0", commit="c6abb4755e50b4c66b9f299ff417252f9e2d088d" }
lazy-regex = "3.1.0"
pico-args = "0.5.0"
regex = "1.10.3"

[profile.release]
strip = "symbols"
