[package]
name = "dict-to-mozc"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Masato TOYOSHIMA", "phoepsilonix <phoepsilonix@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
csv = "1.3.0"
kanaria = { git = "https://github.com/phoepsilonix/kanaria.git", rev = "c6abb475"}
lazy-regex = "3.1.0"
regex = "1.10.3"

[profile.release]
strip = "symbols"
